fixed title not showing in cards

--- a/src/index.css
+++ b/src/index.css
@@ -113,8 +113,6 @@ li:hover {
   width: 8rem;
   height: 2rem;
   border-radius: 20px;
-  background-color: rgba(255, 255, 255, 0.3);
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.35);
   backdrop-filter: blur(10px);
 }
 
@@ -149,7 +147,7 @@ li:hover {
   padding: 100px;
   border-radius: 20px;
   width: 600px;
-  height: 500px;
+  height: 400px;
   background-color: rgba(255, 255, 255, 0.3);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.35);
   backdrop-filter: blur(10px);
